# quests-tracker

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  cobertura.xml  diesel.toml  makefile  quest_tracker.postman_collection.json  tarpaulin-report.html
assets/init-migrations/: down.sql  up.sql
src/: main.rs
src/application/usecases/: adventurers.rs  adventurers_test.rs  authentication.rs  crew_switchboard.rs  crew_swtichboard_test.rs  guild_commanders.rs  guild_commanders_test.rs  journey_ledger.rs  journey_ledger_test.rs  mod.rs  quest_ops.rs  quest_ops_test.rs  quest_viewing.rs  quest_viewing_test.rs
src/config/: config_loader.rs  config_model.rs  mod.rs  stage.rs
src/domain/: mod.rs
src/domain/entities/: adventurers.rs  guild_commanders.rs  quests.rs
src/domain/repositories/: adventurers.rs  crew_switchboard.rs  guild_commanders.rs  journey_ledger.rs  mod.rs  quest_ops.rs  quest_viewing.rs  transaction_provider.rs
src/domain/value_objects/: adventurer_model.rs  board_checking_filter.rs  guild_commander_model.rs  mod.rs  passport.rs  quest_adventurer_junction.rs  quest_model.rs  quest_statuses.rs
src/infrastructure/: mod.rs
src/infrastructure/argon2_hashing/: mod.rs
src/infrastructure/axum_http/: http_serve.rs  middleware.rs
src/infrastructure/axum_http/routers/: adventures.rs  authentication.rs  crew_switchboard.rs  guild_commanders.rs  journey_ledger.rs  (+3 more)
src/infrastructure/hashing/: argon2_hashing.rs  mod.rs
src/infrastructure/jwt_authentication/: jwt_model.rs  mod.rs
src/infrastructure/postgres/: schema.rs
(+20 files in other folders)
