[package]
name = "quests-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
async-trait = "0.1.83"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
mockall = "0.13.0"
diesel = { version = "2.2.4", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15.7"
anyhow = "1.0.93"
